--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
